public class Contrato {

	private uuid[] contratoID;

	private String[] situacaoContrato;

	private int[] numeroContrato;

	private String[] tipo_MatriculaRematricula;

	private String[] contratante;

	private String[] modalidade;

	private Date dataInicio;

	private Date dataTermino;


	private Matricula[] matricula;


	private Aluno aluno;

	/**
	 *  
	 */
	public void mostrarAtributos() {

	}

}
