public class DadoAcademico {

	private uuid[] dadoAcademicoID;

	private String[] serieEscolar;

	private String[] escolaridadeAtual;

	private String[] orgaoInstituicaoEmpresa;

	private String[] outros;

	private Pessoa pessoa;


}
