public class Professor extends Pessoa {

	private String[] especialidade;

	private String[] login;

	private long[] senha;

	private Matricula matricula;

	/**
	 *  
	 */
	public void gerenciarAlunos() {

	}

}
