package gestao;

import java.util.Collection;

public class DadoProfissional {

	private long dadoProfissionalId;

	private String profissaoFuncaoCargo;

	private String orgaoInstituicaoEmpresa;

	private String outros;

	private Collection<Pessoa> pessoa;

}
