@startuml

!define ENTITYMODERN
!define ENTITY_LINE_THICKNESS 2

abstract class Pessoa {
    -pessoaID: int
    -nomeCompleto: string
    -CPF: string
    -RG: string
    -dataNascimento: date
    -genero: string
    -email: string
    -telefoneCelular: string
    -telefoneFixo: string
    -endereco: Endereco
    -cidadeNatal: string
    -estadoNatal: string
    -estrangeiro: boolean
    -dadosAcademicos: DadoAcademico
    -dadosProfissionais: DadoProfissional
}

class Professor {
    -especialidade: string
    -login: string
    -senha: string
}

class Aluno {
    -matricula: string
    -login: string
    -senha: string
    +contrato: Contrato[*]
}

class Endereco {
    -enderecoID: int
    -CEP: string
    -tipo: string
    -nome: string
    -numero: string
    -complemento: string
    -bairro: string
    -estadoAtual: string
    -cidadeAtual: string
}

class DadoAcademico {
    -dadoAcademicoID: int
    -serieEscolar: string
    -escolaridadeAtual: string
    -orgaoInstituicaoEmpresa: string
    -outros: string
}

class DadoProfissional {
    -dadoProfissionalID: int
    -profissaoFuncaoCargo: string
    -orgaoInstituicaoEmpresa: string
    -outros: string
}

class Contrato {
    -contratoID: int
    -situacaoContrato: string
    -numeroContrato: string
    -tipoContrato: string
    -contratante: string
    -modalidade: string
    -dataInicio: date
    -dataTermino: date
    -matricula: Matricula
}

class Matricula {
    -matriculaID: int
    -atual: boolean
    -curso: Curso
    -metodologia: string
    -dataInicioMatricula: date
    -dataFimMatricula: date
    -professor: Professor[*]
    -numHorasAulaCurso: int
    -duracaoCurso: int
    -diasDaSemana: string
    -horário: string
}

class Curso {
    -cursoID: int
    -metodologia: string
    -numHorasAulaCurso: int
    -duracaoCurso: int
    -descricao: string
}

Pessoa <|-- Aluno
Pessoa <|-- Professor

Pessoa *-down-|> Endereco
Pessoa *-down-|> DadoAcademico
Pessoa *-down-|> DadoProfissional

Matricula "1" -- "1" Curso

Contrato "1" -- "1" Matricula

Matricula o-- Professor : precisa usar 1 ou mais

@enduml